[project]
name = "recycling_pipeline"
version = "0.1.0"
description = "recycling_pipeline using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.85.0,<1.0.0",
]

[project.scripts]
kickoff = "recycling_pipeline.main:kickoff"
plot = "recycling_pipeline.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
